RESOLVED FIXED306399
Address more unsafe cast warnings in Source/WebCore/svg/properties
https://bugs.webkit.org/show_bug.cgi?id=306399
Summary Address more unsafe cast warnings in Source/WebCore/svg/properties
Chris Dumez
Reported 2026-01-27 20:43:48 PST
Address more unsafe cast warnings in Source/WebCore/svg/properties.
Attachments
Chris Dumez
Comment 1 2026-01-27 20:44:59 PST
EWS
Comment 2 2026-01-30 18:38:49 PST
Committed 306541@main (543ddf9c7ddd): <https://commits.webkit.org/306541@main> Reviewed commits have been landed. Closing PR #57386 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-30 18:39:13 PST
Note You need to log in before you can comment on or make changes to this bug.