Address more unsafe cast warnings in Source/WebCore/svg/properties https://bugs.webkit.org/show_bug.cgi?id=306399

Reviewed by Darin Adler.

* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/svg/properties/SVGAnimatedPropertyAccessorImpl.h:
* Source/WebCore/svg/properties/SVGAnimatedPropertyAnimatorImpl.h:
(isType):
* Source/WebCore/svg/properties/SVGAnimatedPropertyPairAccessorImpl.h:
* Source/WebCore/svg/properties/SVGAnimatedPropertyPairAnimatorImpl.h:
(isType):
* Source/WebCore/svg/properties/SVGAttributeAnimator.h:
* Source/WebCore/svg/properties/SVGPrimitivePropertyAnimatorImpl.h:
* Source/WebCore/svg/properties/SVGValuePropertyAnimatorImpl.h:
* Source/WebCore/svg/properties/SVGValuePropertyListAnimatorImpl.h:

Canonical link: https://commits.webkit.org/306541@main